--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- History -- Wars of the Vendée, 1793-1832 -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: 'Jean-nu-pieds, Vol. 2
 
   chronique de 1832'
